gcc/testsuite/gm2/pim/fail/inserttok.def
DEFINITION MODULE inserttok ;

(* Just filling the token buffer up *)
VAR VAR VAR VAR VAR VAR VAR VAR VAR VAR
VAR VAR VAR VAR VAR VAR VAR VAR VAR VAR
VAR VAR VAR VAR VAR VAR VAR VAR VAR VAR
VAR VAR VAR VAR VAR VAR VAR VAR VAR VAR
VAR VAR VAR VAR VAR VAR VAR VAR VAR VAR
VAR VAR VAR VAR VAR VAR VAR VAR VAR VAR
VAR VAR VAR VAR VAR VAR VAR VAR VAR VAR
VAR VAR VAR VAR VAR VAR VAR VAR VAR VAR
VAR VAR VAR VAR VAR VAR VAR VAR VAR VAR
VAR VAR VAR VAR VAR VAR VAR VAR VAR VAR
VAR VAR VAR VAR VAR VAR VAR VAR VAR

(* Intentional misspelled VAR keyword *)
PROCEDURE whatever (VAT s: ARRAY OF CHAR) : CARDINAL;

END inserttok.
